--- a/src/styles/_certificates.module.scss
+++ b/src/styles/_certificates.module.scss
@@ -6,7 +6,7 @@
 
 .certificatesGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     gap: 3rem;
     padding-bottom: 2rem;
 }
@@ -71,5 +71,6 @@
 @media (max-width: 749px) {
     .certificatesGrid {
         grid-template-columns: 1fr;
+        padding: 2rem;
     }
 }
