--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,6 +26,7 @@ $light-fundo-pagina: #f5f4f8;
 $light-fundo-sidebar: #ffffff;
 $light-fundo-card: #ffffff;
 $light-sombra-card: rgba(0, 0, 0, 0.05);
+$light-barra-rolagem: #dedde0;
 
 $light-texto-principal: #2d2d2d;
 $light-texto-secundario: #555555;
@@ -63,6 +64,7 @@ $dark-fundo-pagina: #1c1923;
 $dark-fundo-sidebar: #231f2c;
 $dark-fundo-card: #2a2535;
 $dark-sombra-card: rgba(0, 0, 0, 0.4);
+$dark-barra-rolagem: #3d2e43;
 
 $dark-texto-principal: #eae6f2;
 $dark-texto-secundario: #b8b1c5;
